--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -6,6 +6,9 @@
 <!-- <link rel="stylesheet" th:href="@{/style.css}"></link> -->
 <script src="webjars/jquery/3.1.1/jquery.min.js"></script>
 <script src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<script src="/libs/vue.min.js"></script>
+<script src="/libs/jquery.min.js"></script>
 <link rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />  
 </head>
 <script>
@@ -43,6 +46,8 @@
 <form method="post" th:object="${book}" th:action="@{/readingList/add}">
 	<label for="title">Title:</label>
 	<input type="text" th:field="*{title}" size="50"></input><span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span><br/>
+    <label for="publisher">Publisher:</label>
+    <select id="sel"></select><br/>
 	<label for="author">Author:</label>
 	<input type="text" th:field="*{author}" size="50"></input><br/>
 	<label for="isbn">ISBN</label>
