--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,13 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<!-- <link rel="stylesheet" th:href="@{/style.css}"></link> -->
-<script src="webjars/jquery/3.1.1/jquery.min.js"></script>
-<script src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-<script src="/libs/vue.min.js"></script>
-<script src="/libs/jquery.min.js"></script>
-<link rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />  
+
 </head>
 <script>
 	function htmlOnLoad() {
@@ -28,7 +22,7 @@
 	<label for="username">密码:</label>
 	<input type="password" name="password" placeholder="密码" size="30"></input>
 	<br/>
-	<input type="submit"></input>
+	<input type="submit" value="登录"></input>
 </form>
 
 </body>
