--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -4,13 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<!-- <link rel="stylesheet" th:href="@{/style.css}"></link> -->
-<!-- <script src="webjars/jquery/3.1.1/jquery.min.js"></script>
-<script src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-<script src="/libs/vue.min.js"></script>
-<script src="/libs/jquery.min.js"></script>
-<link rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />   -->
+<script th:src="@{libs/vue.min.js}"></script>
+<script th:src="@{libs/jquery.min.js}"></script>
 </head>
 <script>
 	function htmlOnLoad() {
@@ -27,6 +22,10 @@
 	普通用户权限
 </div>
 <br/>
+<form th:action="@{/logout}" method="post">
+	<input type="submit" value="注销"/>
+</form>
+
 <form method="get">
 	<label for="author">Author:</label>
 	<input type="text" name="author" id="author" size="50">
@@ -66,6 +65,6 @@
 	<input type="submit"></input>
 </form>
 
-<script src="/js/readingList.js"></script>
+<script th:src="@{js/readingList.js}"></script>
 </body>
 </html>
