--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 
 <h2>登录</h2>
 
-<p th:if="${param.error}">有错误，请重试</p>
+
 <form method="post" th:action="@{/login}">
 	<label for="username">账号:</label>
 	<input type="text" name="username" placeholder="账号" size="30"></input>
@@ -24,6 +24,7 @@
 	<br/>
 	<input type="submit" value="登录"></input>
 </form>
-
+<p th:if="${param.error}">有错误，请重试</p>
+<p th:if="${param.logout}">系统注销成功</p>
 </body>
 </html>
