--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -15,16 +15,19 @@
 <body onload="htmlOnLoad()">
 
 <h2>Your Reading List</h2>
+
+欢迎<span sec:authentication="name"></span>
 <div sec:authorize="hasRole('ROLE_ADMIN')">
-	管理员权限
+	（管理员）
 </div>
 <div sec:authorize="hasRole('ROLE_USER')">
-	普通用户权限
+	（普通用户）
 </div>
 <br/>
 <form th:action="@{/logout}" method="post">
 	<input type="submit" value="注销"/>
 </form>
+
 
 <form method="get">
 	<label for="author">Author:</label>
