security修改 静态资源加载

--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -4,8 +4,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<!-- <script th:src="@{libs/vue.min.js}"></script>
-<script th:src="@{libs/jquery.min.js}"></script> -->
+
+	<script th:src="@{/static/libs/vue.min.js}"></script>
+	<script th:src="@{/static/libs/jquery.min.js}"></script>
 </head>
 <script>
 	function htmlOnLoad() {
@@ -68,6 +69,6 @@
 	<input type="submit"></input>
 </form>
 
-<!-- <script th:src="@{js/readingList.js}"></script> -->
+<script th:src="@{/static/js/readingList.js}"></script>
 </body>
 </html>
