security修改 静态资源加载

--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
+	<meta name="referrer" content="no-referrer" />
 <title>Insert title here</title>
 
 	<script th:src="@{/static/libs/vue.min.js}"></script>
