--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -60,7 +60,13 @@
 	<label for="title">Title:</label>
 	<input type="text" th:field="*{title}" size="50"></input><span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span><br/>
     <label for="publisher">Publisher:</label>
-    <select id="sel"></select><br/>
+    <select id="publish_id" name="publish_id" >
+		<option value="">请选择</option>
+		<option th:each="publish:${publishs.pub}" th:value="${publish.code}" th:text="${publish.value}"></option>
+
+
+
+	</select><br/>
 	<label for="author">Author:</label>
 	<input type="text" th:field="*{author}" size="50"></input><br/>
 	<label for="isbn">ISBN</label>
