测试Validator类的验证方式

--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -66,7 +66,7 @@
 
 
 
-	</select><br/>
+	</select><span th:if="${#fields.hasErrors('publish_id')}" th:errors="*{publish_id}"></span><br/>
 	<label for="author">Author:</label>
 	<input type="text" th:field="*{author}" size="50"></input><br/>
 	<label for="isbn">ISBN</label>
