项目启动时，出版社信息放入cache中，供页面下拉菜单使用。

--- a/src/main/resources/templates/reading/readingList.html
+++ b/src/main/resources/templates/reading/readingList.html
@@ -62,7 +62,7 @@
     <label for="publisher">Publisher:</label>
     <select id="publish_id" name="publish_id" >
 		<option value="">请选择</option>
-		<option th:each="publish:${publishs.pub}" th:value="${publish.code}" th:text="${publish.value}"></option>
+		<option th:each="publish:${publishs.pub}" th:value="${publish.publish_id}" th:text="${publish.publish_name}"></option>
 
 
 
